--- a/Resources/DictionaryLogin.xaml
+++ b/Resources/DictionaryLogin.xaml
@@ -24,14 +24,65 @@
             <GradientStop Offset="1" Color="#11362f"/>
         </GradientStopCollection>
     </LinearGradientBrush>
-    
-    
-    
+
     <RadialGradientBrush x:Key="ButtonGradient" RadiusX="12">
         <GradientStopCollection>
             <GradientStop Offset="0" Color="#46ab9e"/>
             <GradientStop Offset="1" Color="#2e877b"/>
         </GradientStopCollection>
     </RadialGradientBrush>
+
+    <ControlTemplate x:Key="LoginPageButton" TargetType="Button">
+        <Border x:Name="btnBorder" Height="{TemplateBinding Height}" Width="{TemplateBinding Width}" CornerRadius="10" BorderThickness="4" Background="{StaticResource ButtonGradient}">
+
+
+            <ContentPresenter RecognizesAccessKey="True"
+                    Content="{TemplateBinding Content}"
+                    Margin="{TemplateBinding Margin}"
+                    VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                    HorizontalAlignment="{TemplateBinding HorizontalAlignment}"/>
+        </Border>
+
+
+
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" TargetName="btnBorder" Value="{StaticResource RightSidePanelGradient}"/>
+                <Setter Property="Foreground" Value="#84c2b7"/>
+
+            </Trigger>
+        </ControlTemplate.Triggers>
+
+
+    </ControlTemplate>
+
+
+
+    <LinearGradientBrush x:Key="SplashScreenGradient" StartPoint="0,0" EndPoint="1,1">
+        <GradientStopCollection>
+            <GradientStop Offset="0" Color="#6cc4b4"/>
+            <GradientStop Offset="1" Color="#000000"/>
+
+        </GradientStopCollection>
+    </LinearGradientBrush>
+
+    <Style x:Key="LoginPageButtonStyle" TargetType="Button">
+
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+
+    </Style>
+    
+    
+    
+    
     <BitmapImage x:Key="CarLogo" UriSource="../Images/carlogo.png"></BitmapImage>
+    <BitmapImage x:Key="SplashImage" UriSource="../Images/splash.jpg"></BitmapImage>
+
 </ResourceDictionary>
