--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="LoginPage" Height="800" Width="1400"
         MinHeight="800" MinWidth="1300"
+        WindowStartupLocation="CenterScreen"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -22,6 +23,8 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
+    
+    
     <Grid x:Name="MainGrid" Background="{StaticResource LoginBackgroundGradient}">
 
         <Border x:Name="PanelBorder" Margin="100,50">
@@ -66,6 +69,7 @@
                             <RowDefinition Height="2*"/>
                         </Grid.RowDefinitions>
 
+                        
                         <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
 
                             <TextBlock Text="LOGIN"
@@ -76,13 +80,43 @@
                               HorizontalAlignment="Center" VerticalAlignment="Top"
                               StrokeThickness="2"/>
                         </StackPanel>
-                        <TextBox Grid.Row="1" Width="450" Height="40" FontSize="25" Foreground="White" BorderBrush="White" Style="{x:Null}" Background="Transparent" BorderThickness="0,0,0,2" />
-                        <PasswordBox Grid.Row="2" Width="450" Height="40" FontSize="25" Foreground="White" BorderBrush="White" Style="{x:Null}" Background="Transparent" BorderThickness="0,0,0,2" />
-                        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Button Width="150" Height="50" FontWeight="Light" Content="Login"   Background="{StaticResource ButtonGradient}" BorderThickness="0" Foreground="White" Margin="0,0,90,0"/>
-                            <Button Width="150" Height="50" FontWeight="Light" Content="Sign Up" Background="{StaticResource ButtonGradient}" BorderThickness="0" Foreground="White" />
 
-                        </StackPanel>
+
+
+                        <Grid x:Name="Emailbox" Grid.Row="1">
+                            <TextBlock Width="450" Height="40" FontSize="25" Foreground="DarkGray" Text="Email" Visibility="{Binding IsFocusEmail, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                             
+                            </TextBlock>
+                            <TextBox  x:Name="txtEmail"  Width="450" Height="40" FontSize="25" Foreground="White"
+                                     BorderBrush="White" Style="{x:Null}" Background="Transparent" BorderThickness="0,0,0,2">
+                               
+                            </TextBox>
+                        </Grid>
+
+                        
+
+                        <Grid x:Name="Passwordbox"  Grid.Row="2">
+                            <TextBlock Width="450" Height="40" FontSize="25" Foreground="DarkGray" Text="Password" Visibility="{Binding IsFocusPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                
+                                    
+                            </TextBlock>
+                        <PasswordBox  Width="450" Height="40" FontSize="25" Foreground="White" BorderBrush="White"
+                                      Style="{x:Null}" Background="Transparent" BorderThickness="0,0,0,2" />
+                        </Grid>
+                        
+                        
+                        
+                        <Grid x:Name="Buttons" Grid.Row="3" >
+                            <Grid.ColumnDefinitions>
+                                
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" Template="{StaticResource LoginPageButton}" Style="{StaticResource LoginPageButtonStyle}" Content="Login" Command="{Binding IsFocusEmailCommand}"/>
+                            <Button Grid.Column="1" Template="{StaticResource LoginPageButton}" Style="{StaticResource LoginPageButtonStyle}" Content="Sign Up" />
+
+                        </Grid>
                     </Grid>
                 </Border>
             </Grid>
