--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -113,7 +113,7 @@
                                 <ColumnDefinition Width="1*"/>
 
                             </Grid.ColumnDefinitions>
-                            <Button Grid.Column="0" Template="{StaticResource LoginPageButton}" Style="{StaticResource LoginPageButtonStyle}" Content="Login" Command="{Binding IsFocusEmailCommand}"/>
+                            <Button Grid.Column="0" Template="{StaticResource LoginPageButton}" Style="{StaticResource LoginPageButtonStyle}" Content="Login" Command="{Binding LoginCommand}"/>
                             <Button Grid.Column="1" Template="{StaticResource LoginPageButton}" Style="{StaticResource LoginPageButtonStyle}" Content="Sign Up" />
 
                         </Grid>
