--- a/UserControls/UserControlSignUp.xaml
+++ b/UserControls/UserControlSignUp.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Babat_Taxi.UserControls"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -54,26 +55,20 @@
 
         </Grid>
 
-        <Grid x:Name="CardInfo" Grid.Row="3">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-
-
-
-                <RadioButton HorizontalAlignment="Center" Grid.Column="0" GroupName="CardGroup" Content="Yes" ></RadioButton>
-                <RadioButton HorizontalAlignment="Center" Grid.Column="1" GroupName="CardGroup" Content="No"></RadioButton>
-            </Grid>
-
-        </Grid>
-
-        <Grid x:Name="Emailagain" Grid.Row="4">
-            <local:PlaceHolderTextBox  PlaceHolderText="Username" Text="{Binding EmailTxtBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   Width="450" Height="40" FontSize="25" Foreground="White"
+        <Grid x:Name="Emailagain" Grid.Row="3">
+            <local:PlaceHolderTextBox  PlaceHolderText="Password " Text="{Binding EmailTxtBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   Width="450" Height="40" FontSize="25" Foreground="White"
                                      BorderBrush="White" Style="{x:Null}" Background="Transparent" BorderThickness="0,0,0,2"/>
 
         </Grid>
+        
+        
+        <StackPanel x:Name="CardInfo" Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"> 
+            <RadioButton Background="White" Content="Yes" Foreground="White" FontSize="20" GroupName="CardCheck"/>
+            <TextBlock Text="Do you have a credit card?" FontSize="20" Foreground="White" FontFamily="Segoe UI" Margin="50,0,50,0"/>
+            <RadioButton Background="White" Content="No" Foreground="White" FontSize="20" GroupName="CardCheck" />
+
+        </StackPanel>
+
 
 
         
