Login Page Finished but card session still not implemented

--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -16,7 +16,8 @@
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Name="MyWindow">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -78,7 +79,7 @@
 
                                 <Button Template="{StaticResource Login_and_SingUp}" Content="LOGIN"
                                    VerticalAlignment="Center" HorizontalAlignment="Center"
-                                   FontSize="30"  FontWeight="Light" Command="{Binding Login_PageCommand}"/>
+                                   FontSize="30"  FontWeight="Light" Command="{Binding Login_PageCommand}" CommandParameter="{Binding ElementName=MyWindow}"/>
 
                                 <Line x:Name="line1" Margin="0,8,0,0" X1="80" Stroke="#4fe0c6"
                               HorizontalAlignment="Center" VerticalAlignment="Top"
